update swa user
